# hysr

./: .flake8  .gitignore  MUJOCO_LOG.TXT  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python_mypy.yml
hysr/: #main_sim.py#  __init__.py  ball_trajectories.py  config.py  defaults.py  extra_balls.py  hysr_control.py  hysr_types.py  main_sim.py  native_rewards.py  normalize.py  observations.py  parallel_bursts.py  pressure_control.py  pressure_robot.py  pseudo_real_robot.py  rewards.py  robot_state.py  scene.py  time_steps.py  types.py
hysr_install/: pam.sh  pam_install.py
tests/: mjkey.txt  pam_mujoco_utils.py  test_combinations.py  test_extra_balls.py  test_hysr_control.py  test_main_sim.py  test_normalize.py  test_observations.py  test_parallel_burst.py  test_pressure_robot.py  test_rewards.py
